app/sass/media.sass
@import "vars"

/*Tablets, phones*/
@media only screen and (max-width: 1024px)  and (orientation: portrait)
  /*REVIEWS*/
  .reviews:before
    height: 100vh!important
    min-height: 1200px!important
  .reviews
    height: 100vh!important
    min-height: 1200px!important
    &__nav
      top: calc(41vh + 10px)
      left: 50%
    .h2
      // font-size: 34px
      margin-top: 70px
      margin-left: 0
      left: 50%
      transform: translateX(-50%);
    &__content
      margin-top: 15px
      font-size: 12px
      flex-wrap: wrap
      height: 80vh!important
    &__box
      // margin-left: -30px
      width: 100%
      height: 40vh
    .button.show-review
      position: relative
      top: 10px!important
      margin-top: 10px
      left: 50%
    .reviews__new-review__container 
      height: 33%
      width: 100%
      // margin-top: 30px
      .reviews__new-review
        width: 42%
        left: 50% 
        margin: 0
        transform: translateX(-50%);
        position: relative
        align-items: stretch
        .h3
          text-align: center
          margin: 30px 0 10px 0
    .h2
      font-size: 34px
      margin-top: 70px
    .h3 
      font-size: 23px
      line-height: 1
    .reviews__new-review .review__character select
      height: auto
      font-size: 0.8em
     

  /*REVIEWS END*/


/*==========  Desktop First  ==========*/
@media only screen and (max-width : 1920px)
  
  /*GALLERY*/
  .galery
    height: 1250px
    &__content
      margin-top: 6%
    .container,.row
      height: 1080px
      width: 1100px
    .button-circle
      bottom: 30px
  /*GALLERY END*/
  /*FORM*/
  .form__section
    min-height: calc(760px - 15vh)
    .form__container
      min-height: calc(57% + 15vh)
      margin-top: 115px
    .form__input
      min-height: 45px
    .form__textarea
      min-height: 230px
    .button
      margin-bottom: 10px
      min-height: 44px
  /*FORM END*/
  
  /*FOOTER*/
  .footer
    @for $i from 3 through 6
      &__contacts__item:nth-child(#{$i})
/* ... */

